--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,4 +5,10 @@
 @import 'variables';
 
 // Bootstrap
-@import 'bootstrap/scss/bootstrap';
+@import 'bootstrap/scss/bootstrap-grid';
+
+// Tailwind
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
